--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -45,6 +45,8 @@ allow 107.174.231.197;
 allow 107.181.245.162;
 allow 107.181.245.163;
 allow 107.181.245.164;
+allow 107.181.245.165;
+allow 107.181.245.166;
 allow 107.189.10.175;
 allow 107.189.11.111;
 allow 107.189.1.160;
@@ -660,6 +662,7 @@ allow 200.122.181.2;
 allow 2001:40e8:0:f090::100;
 allow 2001:41d0:1008:20d1::1;
 allow 2001:41d0:2:9161::1;
+allow 2001:41d0:304:200::9dce;
 allow 2001:41d0:401:3200::3efd;
 allow 2001:41d0:404:300::dd2;
 allow 2001:41d0:601:1100::108e;
@@ -910,7 +913,6 @@ allow 212.95.52.76;
 allow 213.252.140.118;
 allow 213.95.149.22;
 allow 216.239.90.19;
-allow 216.24.216.237;
 allow 216.73.159.101;
 allow 216.73.159.75;
 allow 217.12.221.131;
@@ -1508,7 +1510,6 @@ allow 2a0f:e586:f:f::182;
 allow 2a0f:e586:f:f::188;
 allow 2a0f:e586:f:f:9491:941d:caf5:50e7;
 allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
-allow 2a10:1fc0:7::d6ca:a017;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
 allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
@@ -1542,8 +1543,9 @@ allow 37.252.254.33;
 allow 37.252.255.135;
 allow 37.48.120.196;
 allow 37.48.70.156;
+allow 3.82.0.14;
+allow 38.242.254.131;
 allow 38.97.116.244;
-allow 44.208.101.176;
 allow 45.12.3.80;
 allow 45.128.232.151;
 allow 45.132.246.245;
@@ -1745,7 +1747,6 @@ allow 84.54.51.68;
 allow 84.54.51.69;
 allow 85.17.9.83;
 allow 85.215.76.62;
-allow 85.239.60.173;
 allow 85.93.218.204;
 allow 87.118.116.103;
 allow 87.118.116.90;
