--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -6,6 +6,7 @@ deny 2001:1b60:3:239:1003:106:0:1;
 deny 2001:40e8:0:f090::100;
 deny 2001:41d0:1008:20d1::1;
 deny 2001:41d0:2:9161::1;
+deny 2001:41d0:304:200::9dce;
 deny 2001:41d0:401:3200::3efd;
 deny 2001:41d0:404:300::dd2;
 deny 2001:41d0:601:1100::108e;
@@ -659,7 +660,6 @@ deny 2a0f:e586:f:f::182;
 deny 2a0f:e586:f:f::188;
 deny 2a0f:e586:f:f:9491:941d:caf5:50e7;
 deny 2a0f:e586:f:f:baa4:d491:90be:dca5;
-deny 2a10:1fc0:7::d6ca:a017;
 deny 2a10:8a40:f313::29;
 deny 2a10:c800:1:9cc6::1;
 deny 2a11:6100:0:22:a236:9fff:fe9e:36ea;
