--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -152,6 +152,7 @@ allow 149.56.44.47;
 allow 151.80.148.159;
 allow 152.89.233.169;
 allow 154.16.116.61;
+allow 156.146.63.172;
 allow 160.119.249.240;
 allow 162.247.72.192;
 allow 162.247.72.199;
@@ -488,6 +489,7 @@ allow 185.246.188.74;
 allow 185.246.189.77;
 allow 185.246.189.99;
 allow 185.246.86.197;
+allow 185.247.184.105;
 allow 185.247.184.33;
 allow 185.252.232.218;
 allow 185.254.196.141;
@@ -649,7 +651,6 @@ allow 199.195.250.46;
 allow 199.195.251.119;
 allow 199.195.251.148;
 allow 199.195.251.78;
-allow 199.195.253.124;
 allow 199.195.253.156;
 allow 199.195.253.180;
 allow 199.195.253.247;
@@ -1300,7 +1301,6 @@ allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:104:fe02::1;
 allow 2a04:52c0:105:78fc::1;
-allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394::1;
 allow 2a04:52c0:108:4b9e::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1311,6 +1311,7 @@ allow 2a04:52c0:130:896e::1;
 allow 2a04:52c0:130:d285::1;
 allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:20::1;
+allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
 allow 2a05:541:121:33::1;
 allow 2a05:541:122:49::1;
@@ -1543,7 +1544,6 @@ allow 37.252.254.33;
 allow 37.252.255.135;
 allow 37.48.120.196;
 allow 37.48.70.156;
-allow 3.82.0.14;
 allow 38.242.254.131;
 allow 38.97.116.244;
 allow 45.12.3.80;
@@ -1645,7 +1645,6 @@ allow 5.196.8.113;
 allow 5.196.95.34;
 allow 5.255.100.126;
 allow 5.255.100.219;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.103.190;
 allow 5.255.103.235;
@@ -1672,6 +1671,7 @@ allow 5.255.99.5;
 allow 5.2.67.226;
 allow 5.2.79.190;
 allow 5.34.182.203;
+allow 54.243.189.55;
 allow 5.42.66.6;
 allow 5.42.80.232;
 allow 5.42.80.233;
