--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -153,7 +153,6 @@ deny 152.89.233.169;
 deny 154.16.116.61;
 deny 156.146.63.172;
 deny 160.119.249.240;
-deny 161.35.129.51;
 deny 162.247.72.192;
 deny 162.247.72.199;
 deny 162.247.74.200;
@@ -238,12 +237,16 @@ deny 180.150.226.99;
 deny 184.105.48.40;
 deny 184.75.223.219;
 deny 185.100.85.132;
+deny 185.100.85.22;
+deny 185.100.85.23;
 deny 185.100.85.24;
 deny 185.100.85.25;
 deny 185.100.87.136;
+deny 185.100.87.139;
 deny 185.100.87.174;
 deny 185.100.87.192;
 deny 185.100.87.250;
+deny 185.100.87.253;
 deny 185.100.87.41;
 deny 185.10.16.41;
 deny 185.106.94.195;
@@ -311,6 +314,9 @@ deny 185.220.100.252;
 deny 185.220.100.253;
 deny 185.220.100.254;
 deny 185.220.100.255;
+deny 185.220.101.0;
+deny 185.220.101.1;
+deny 185.220.101.10;
 deny 185.220.101.100;
 deny 185.220.101.101;
 deny 185.220.101.102;
@@ -321,8 +327,11 @@ deny 185.220.101.106;
 deny 185.220.101.107;
 deny 185.220.101.108;
 deny 185.220.101.109;
+deny 185.220.101.11;
 deny 185.220.101.110;
+deny 185.220.101.12;
 deny 185.220.101.128;
+deny 185.220.101.13;
 deny 185.220.101.130;
 deny 185.220.101.131;
 deny 185.220.101.132;
@@ -333,6 +342,7 @@ deny 185.220.101.136;
 deny 185.220.101.137;
 deny 185.220.101.138;
 deny 185.220.101.139;
+deny 185.220.101.14;
 deny 185.220.101.140;
 deny 185.220.101.141;
 deny 185.220.101.142;
@@ -343,6 +353,7 @@ deny 185.220.101.146;
 deny 185.220.101.147;
 deny 185.220.101.148;
 deny 185.220.101.149;
+deny 185.220.101.15;
 deny 185.220.101.150;
 deny 185.220.101.151;
 deny 185.220.101.152;
@@ -353,6 +364,7 @@ deny 185.220.101.156;
 deny 185.220.101.157;
 deny 185.220.101.158;
 deny 185.220.101.159;
+deny 185.220.101.16;
 deny 185.220.101.160;
 deny 185.220.101.161;
 deny 185.220.101.162;
@@ -363,6 +375,7 @@ deny 185.220.101.166;
 deny 185.220.101.167;
 deny 185.220.101.168;
 deny 185.220.101.169;
+deny 185.220.101.17;
 deny 185.220.101.170;
 deny 185.220.101.171;
 deny 185.220.101.172;
@@ -373,6 +386,7 @@ deny 185.220.101.176;
 deny 185.220.101.177;
 deny 185.220.101.178;
 deny 185.220.101.179;
+deny 185.220.101.18;
 deny 185.220.101.180;
 deny 185.220.101.181;
 deny 185.220.101.182;
@@ -382,8 +396,23 @@ deny 185.220.101.186;
 deny 185.220.101.187;
 deny 185.220.101.188;
 deny 185.220.101.189;
+deny 185.220.101.19;
 deny 185.220.101.190;
 deny 185.220.101.191;
+deny 185.220.101.2;
+deny 185.220.101.20;
+deny 185.220.101.21;
+deny 185.220.101.22;
+deny 185.220.101.23;
+deny 185.220.101.24;
+deny 185.220.101.25;
+deny 185.220.101.26;
+deny 185.220.101.27;
+deny 185.220.101.28;
+deny 185.220.101.29;
+deny 185.220.101.3;
+deny 185.220.101.30;
+deny 185.220.101.31;
 deny 185.220.101.32;
 deny 185.220.101.33;
 deny 185.220.101.34;
@@ -392,6 +421,7 @@ deny 185.220.101.36;
 deny 185.220.101.37;
 deny 185.220.101.38;
 deny 185.220.101.39;
+deny 185.220.101.4;
 deny 185.220.101.40;
 deny 185.220.101.41;
 deny 185.220.101.42;
@@ -402,6 +432,7 @@ deny 185.220.101.46;
 deny 185.220.101.47;
 deny 185.220.101.48;
 deny 185.220.101.49;
+deny 185.220.101.5;
 deny 185.220.101.50;
 deny 185.220.101.51;
 deny 185.220.101.52;
@@ -412,6 +443,7 @@ deny 185.220.101.56;
 deny 185.220.101.57;
 deny 185.220.101.58;
 deny 185.220.101.59;
+deny 185.220.101.6;
 deny 185.220.101.60;
 deny 185.220.101.61;
 deny 185.220.101.62;
@@ -422,6 +454,7 @@ deny 185.220.101.66;
 deny 185.220.101.67;
 deny 185.220.101.68;
 deny 185.220.101.69;
+deny 185.220.101.7;
 deny 185.220.101.70;
 deny 185.220.101.71;
 deny 185.220.101.72;
@@ -432,6 +465,7 @@ deny 185.220.101.76;
 deny 185.220.101.77;
 deny 185.220.101.78;
 deny 185.220.101.79;
+deny 185.220.101.8;
 deny 185.220.101.80;
 deny 185.220.101.81;
 deny 185.220.101.82;
@@ -442,6 +476,7 @@ deny 185.220.101.86;
 deny 185.220.101.87;
 deny 185.220.101.88;
 deny 185.220.101.89;
+deny 185.220.101.9;
 deny 185.220.101.90;
 deny 185.220.101.96;
 deny 185.220.101.97;
@@ -628,7 +663,6 @@ deny 198.251.84.237;
 deny 198.251.88.18;
 deny 198.251.89.96;
 deny 198.46.166.157;
-deny 198.46.215.32;
 deny 198.50.128.237;
 deny 198.58.107.53;
 deny 198.96.155.3;
@@ -1316,7 +1350,6 @@ deny 2a05:541:112:31::1;
 deny 2a05:541:121:33::1;
 deny 2a05:541:122:49::1;
 deny 2a05:b0c7:67c6::1;
-deny 2a05:b0c7:6949::1;
 deny 2a05:b0c7:6b72::1;
 deny 2a05:b0c7:6bd4::1;
 deny 2a06:1280:bee1:2::ee12:230;
@@ -1324,6 +1357,10 @@ deny 2a06:1700:0:12::1;
 deny 2a06:1700:0:12::2;
 deny 2a06:1700:0:12::3;
 deny 2a06:1700:0:12::4;
+deny 2a06:1700:0:15::1;
+deny 2a06:1700:0:15::2;
+deny 2a06:1700:0:15::3;
+deny 2a06:1700:0:15::4;
 deny 2a06:1700:0:16::1;
 deny 2a06:1700:0:16b::11;
 deny 2a06:1700:0:3c::1;
@@ -1348,6 +1385,10 @@ deny 2a0b:f4c0:16c:16::1;
 deny 2a0b:f4c0:16c:2::1;
 deny 2a0b:f4c0:16c:3::1;
 deny 2a0b:f4c0:16c:4::1;
+deny 2a0b:f4c2::;
+deny 2a0b:f4c2::1;
+deny 2a0b:f4c2::10;
+deny 2a0b:f4c2::11;
 deny 2a0b:f4c2:1::128;
 deny 2a0b:f4c2:1::130;
 deny 2a0b:f4c2:1::132;
@@ -1408,6 +1449,19 @@ deny 2a0b:f4c2:1::188;
 deny 2a0b:f4c2:1::189;
 deny 2a0b:f4c2:1::190;
 deny 2a0b:f4c2:1::191;
+deny 2a0b:f4c2::12;
+deny 2a0b:f4c2::13;
+deny 2a0b:f4c2::14;
+deny 2a0b:f4c2::15;
+deny 2a0b:f4c2::16;
+deny 2a0b:f4c2::17;
+deny 2a0b:f4c2::18;
+deny 2a0b:f4c2::19;
+deny 2a0b:f4c2::2;
+deny 2a0b:f4c2::20;
+deny 2a0b:f4c2::21;
+deny 2a0b:f4c2::22;
+deny 2a0b:f4c2::23;
 deny 2a0b:f4c2:2::32;
 deny 2a0b:f4c2:2::33;
 deny 2a0b:f4c2:2::34;
@@ -1416,6 +1470,7 @@ deny 2a0b:f4c2:2::36;
 deny 2a0b:f4c2:2::37;
 deny 2a0b:f4c2:2::38;
 deny 2a0b:f4c2:2::39;
+deny 2a0b:f4c2::24;
 deny 2a0b:f4c2:2::40;
 deny 2a0b:f4c2:2::41;
 deny 2a0b:f4c2:2::42;
@@ -1426,6 +1481,7 @@ deny 2a0b:f4c2:2::46;
 deny 2a0b:f4c2:2::47;
 deny 2a0b:f4c2:2::48;
 deny 2a0b:f4c2:2::49;
+deny 2a0b:f4c2::25;
 deny 2a0b:f4c2:2::50;
 deny 2a0b:f4c2:2::51;
 deny 2a0b:f4c2:2::52;
@@ -1436,10 +1492,17 @@ deny 2a0b:f4c2:2::56;
 deny 2a0b:f4c2:2::57;
 deny 2a0b:f4c2:2::58;
 deny 2a0b:f4c2:2::59;
+deny 2a0b:f4c2::26;
 deny 2a0b:f4c2:2::60;
 deny 2a0b:f4c2:2::61;
 deny 2a0b:f4c2:2::62;
 deny 2a0b:f4c2:2::63;
+deny 2a0b:f4c2::27;
+deny 2a0b:f4c2::28;
+deny 2a0b:f4c2::29;
+deny 2a0b:f4c2::3;
+deny 2a0b:f4c2::30;
+deny 2a0b:f4c2::31;
 deny 2a0b:f4c2:3::64;
 deny 2a0b:f4c2:3::65;
 deny 2a0b:f4c2:3::66;
@@ -1467,6 +1530,7 @@ deny 2a0b:f4c2:3::87;
 deny 2a0b:f4c2:3::88;
 deny 2a0b:f4c2:3::89;
 deny 2a0b:f4c2:3::90;
+deny 2a0b:f4c2::4;
 deny 2a0b:f4c2:4::100;
 deny 2a0b:f4c2:4::101;
 deny 2a0b:f4c2:4::102;
@@ -1482,6 +1546,11 @@ deny 2a0b:f4c2:4::96;
 deny 2a0b:f4c2:4::97;
 deny 2a0b:f4c2:4::98;
 deny 2a0b:f4c2:4::99;
+deny 2a0b:f4c2::5;
+deny 2a0b:f4c2::6;
+deny 2a0b:f4c2::7;
+deny 2a0b:f4c2::8;
+deny 2a0b:f4c2::9;
 deny 2a0c:e300::23;
 deny 2a0d:3e83:1:b284::1;
 deny 2a0d:c2c0:1:4::2;
@@ -1530,7 +1599,7 @@ deny 2a12:8641:3:24::;
 deny 2a12:a800:2:1:45:138:16:203;
 deny 31.129.22.65;
 deny 31.42.185.134;
-deny 3.220.42.226;
+deny 34.239.229.96;
 deny 35.0.127.52;
 deny 35.240.241.135;
 deny 37.1.201.144;
@@ -1544,7 +1613,6 @@ deny 37.252.254.33;
 deny 37.252.255.135;
 deny 37.48.120.196;
 deny 37.48.70.156;
-deny 38.242.254.131;
 deny 38.97.116.244;
 deny 45.12.3.80;
 deny 45.128.232.151;
@@ -1599,7 +1667,6 @@ deny 45.79.50.161;
 deny 45.80.158.205;
 deny 45.80.158.27;
 deny 45.80.208.225;
-deny 45.81.242.8;
 deny 45.8.22.207;
 deny 45.83.104.137;
 deny 45.9.148.219;
@@ -1681,7 +1748,6 @@ deny 54.36.108.162;
 deny 5.45.102.93;
 deny 5.45.104.176;
 deny 5.45.98.162;
-deny 5.61.51.143;
 deny 5.79.66.19;
 deny 62.133.45.2;
 deny 62.171.137.169;
@@ -1741,7 +1807,6 @@ deny 84.16.224.227;
 deny 84.19.182.20;
 deny 84.239.46.144;
 deny 84.247.165.51;
-deny 84.54.51.61;
 deny 84.54.51.68;
 deny 84.54.51.69;
 deny 85.17.9.83;
@@ -1837,3 +1902,4 @@ deny 95.164.46.204;
 deny 95.168.173.143;
 deny 95.211.210.103;
 deny 95.211.244.28;
+deny 98.128.173.33;
