--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -465,7 +465,6 @@ deny 2a05:541:112:31::1;
 deny 2a05:541:121:33::1;
 deny 2a05:541:122:49::1;
 deny 2a05:b0c7:67c6::1;
-deny 2a05:b0c7:6949::1;
 deny 2a05:b0c7:6b72::1;
 deny 2a05:b0c7:6bd4::1;
 deny 2a06:1280:bee1:2::ee12:230;
@@ -473,6 +472,10 @@ deny 2a06:1700:0:12::1;
 deny 2a06:1700:0:12::2;
 deny 2a06:1700:0:12::3;
 deny 2a06:1700:0:12::4;
+deny 2a06:1700:0:15::1;
+deny 2a06:1700:0:15::2;
+deny 2a06:1700:0:15::3;
+deny 2a06:1700:0:15::4;
 deny 2a06:1700:0:16::1;
 deny 2a06:1700:0:16b::11;
 deny 2a06:1700:0:3c::1;
@@ -497,6 +500,10 @@ deny 2a0b:f4c0:16c:16::1;
 deny 2a0b:f4c0:16c:2::1;
 deny 2a0b:f4c0:16c:3::1;
 deny 2a0b:f4c0:16c:4::1;
+deny 2a0b:f4c2::;
+deny 2a0b:f4c2::1;
+deny 2a0b:f4c2::10;
+deny 2a0b:f4c2::11;
 deny 2a0b:f4c2:1::128;
 deny 2a0b:f4c2:1::130;
 deny 2a0b:f4c2:1::132;
@@ -557,6 +564,19 @@ deny 2a0b:f4c2:1::188;
 deny 2a0b:f4c2:1::189;
 deny 2a0b:f4c2:1::190;
 deny 2a0b:f4c2:1::191;
+deny 2a0b:f4c2::12;
+deny 2a0b:f4c2::13;
+deny 2a0b:f4c2::14;
+deny 2a0b:f4c2::15;
+deny 2a0b:f4c2::16;
+deny 2a0b:f4c2::17;
+deny 2a0b:f4c2::18;
+deny 2a0b:f4c2::19;
+deny 2a0b:f4c2::2;
+deny 2a0b:f4c2::20;
+deny 2a0b:f4c2::21;
+deny 2a0b:f4c2::22;
+deny 2a0b:f4c2::23;
 deny 2a0b:f4c2:2::32;
 deny 2a0b:f4c2:2::33;
 deny 2a0b:f4c2:2::34;
@@ -565,6 +585,7 @@ deny 2a0b:f4c2:2::36;
 deny 2a0b:f4c2:2::37;
 deny 2a0b:f4c2:2::38;
 deny 2a0b:f4c2:2::39;
+deny 2a0b:f4c2::24;
 deny 2a0b:f4c2:2::40;
 deny 2a0b:f4c2:2::41;
 deny 2a0b:f4c2:2::42;
@@ -575,6 +596,7 @@ deny 2a0b:f4c2:2::46;
 deny 2a0b:f4c2:2::47;
 deny 2a0b:f4c2:2::48;
 deny 2a0b:f4c2:2::49;
+deny 2a0b:f4c2::25;
 deny 2a0b:f4c2:2::50;
 deny 2a0b:f4c2:2::51;
 deny 2a0b:f4c2:2::52;
@@ -585,10 +607,17 @@ deny 2a0b:f4c2:2::56;
 deny 2a0b:f4c2:2::57;
 deny 2a0b:f4c2:2::58;
 deny 2a0b:f4c2:2::59;
+deny 2a0b:f4c2::26;
 deny 2a0b:f4c2:2::60;
 deny 2a0b:f4c2:2::61;
 deny 2a0b:f4c2:2::62;
 deny 2a0b:f4c2:2::63;
+deny 2a0b:f4c2::27;
+deny 2a0b:f4c2::28;
+deny 2a0b:f4c2::29;
+deny 2a0b:f4c2::3;
+deny 2a0b:f4c2::30;
+deny 2a0b:f4c2::31;
 deny 2a0b:f4c2:3::64;
 deny 2a0b:f4c2:3::65;
 deny 2a0b:f4c2:3::66;
@@ -616,6 +645,7 @@ deny 2a0b:f4c2:3::87;
 deny 2a0b:f4c2:3::88;
 deny 2a0b:f4c2:3::89;
 deny 2a0b:f4c2:3::90;
+deny 2a0b:f4c2::4;
 deny 2a0b:f4c2:4::100;
 deny 2a0b:f4c2:4::101;
 deny 2a0b:f4c2:4::102;
@@ -631,6 +661,11 @@ deny 2a0b:f4c2:4::96;
 deny 2a0b:f4c2:4::97;
 deny 2a0b:f4c2:4::98;
 deny 2a0b:f4c2:4::99;
+deny 2a0b:f4c2::5;
+deny 2a0b:f4c2::6;
+deny 2a0b:f4c2::7;
+deny 2a0b:f4c2::8;
+deny 2a0b:f4c2::9;
 deny 2a0c:e300::23;
 deny 2a0d:3e83:1:b284::1;
 deny 2a0d:c2c0:1:4::2;
