--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -465,7 +465,6 @@ set_real_ip_from 2a05:541:112:31::1;
 set_real_ip_from 2a05:541:121:33::1;
 set_real_ip_from 2a05:541:122:49::1;
 set_real_ip_from 2a05:b0c7:67c6::1;
-set_real_ip_from 2a05:b0c7:6949::1;
 set_real_ip_from 2a05:b0c7:6b72::1;
 set_real_ip_from 2a05:b0c7:6bd4::1;
 set_real_ip_from 2a06:1280:bee1:2::ee12:230;
@@ -473,6 +472,10 @@ set_real_ip_from 2a06:1700:0:12::1;
 set_real_ip_from 2a06:1700:0:12::2;
 set_real_ip_from 2a06:1700:0:12::3;
 set_real_ip_from 2a06:1700:0:12::4;
+set_real_ip_from 2a06:1700:0:15::1;
+set_real_ip_from 2a06:1700:0:15::2;
+set_real_ip_from 2a06:1700:0:15::3;
+set_real_ip_from 2a06:1700:0:15::4;
 set_real_ip_from 2a06:1700:0:16::1;
 set_real_ip_from 2a06:1700:0:16b::11;
 set_real_ip_from 2a06:1700:0:3c::1;
@@ -497,6 +500,10 @@ set_real_ip_from 2a0b:f4c0:16c:16::1;
 set_real_ip_from 2a0b:f4c0:16c:2::1;
 set_real_ip_from 2a0b:f4c0:16c:3::1;
 set_real_ip_from 2a0b:f4c0:16c:4::1;
+set_real_ip_from 2a0b:f4c2::;
+set_real_ip_from 2a0b:f4c2::1;
+set_real_ip_from 2a0b:f4c2::10;
+set_real_ip_from 2a0b:f4c2::11;
 set_real_ip_from 2a0b:f4c2:1::128;
 set_real_ip_from 2a0b:f4c2:1::130;
 set_real_ip_from 2a0b:f4c2:1::132;
@@ -557,6 +564,19 @@ set_real_ip_from 2a0b:f4c2:1::188;
 set_real_ip_from 2a0b:f4c2:1::189;
 set_real_ip_from 2a0b:f4c2:1::190;
 set_real_ip_from 2a0b:f4c2:1::191;
+set_real_ip_from 2a0b:f4c2::12;
+set_real_ip_from 2a0b:f4c2::13;
+set_real_ip_from 2a0b:f4c2::14;
+set_real_ip_from 2a0b:f4c2::15;
+set_real_ip_from 2a0b:f4c2::16;
+set_real_ip_from 2a0b:f4c2::17;
+set_real_ip_from 2a0b:f4c2::18;
+set_real_ip_from 2a0b:f4c2::19;
+set_real_ip_from 2a0b:f4c2::2;
+set_real_ip_from 2a0b:f4c2::20;
+set_real_ip_from 2a0b:f4c2::21;
+set_real_ip_from 2a0b:f4c2::22;
+set_real_ip_from 2a0b:f4c2::23;
 set_real_ip_from 2a0b:f4c2:2::32;
 set_real_ip_from 2a0b:f4c2:2::33;
 set_real_ip_from 2a0b:f4c2:2::34;
@@ -565,6 +585,7 @@ set_real_ip_from 2a0b:f4c2:2::36;
 set_real_ip_from 2a0b:f4c2:2::37;
 set_real_ip_from 2a0b:f4c2:2::38;
 set_real_ip_from 2a0b:f4c2:2::39;
+set_real_ip_from 2a0b:f4c2::24;
 set_real_ip_from 2a0b:f4c2:2::40;
 set_real_ip_from 2a0b:f4c2:2::41;
 set_real_ip_from 2a0b:f4c2:2::42;
@@ -575,6 +596,7 @@ set_real_ip_from 2a0b:f4c2:2::46;
 set_real_ip_from 2a0b:f4c2:2::47;
 set_real_ip_from 2a0b:f4c2:2::48;
 set_real_ip_from 2a0b:f4c2:2::49;
+set_real_ip_from 2a0b:f4c2::25;
 set_real_ip_from 2a0b:f4c2:2::50;
 set_real_ip_from 2a0b:f4c2:2::51;
 set_real_ip_from 2a0b:f4c2:2::52;
@@ -585,10 +607,17 @@ set_real_ip_from 2a0b:f4c2:2::56;
 set_real_ip_from 2a0b:f4c2:2::57;
 set_real_ip_from 2a0b:f4c2:2::58;
 set_real_ip_from 2a0b:f4c2:2::59;
+set_real_ip_from 2a0b:f4c2::26;
 set_real_ip_from 2a0b:f4c2:2::60;
 set_real_ip_from 2a0b:f4c2:2::61;
 set_real_ip_from 2a0b:f4c2:2::62;
 set_real_ip_from 2a0b:f4c2:2::63;
+set_real_ip_from 2a0b:f4c2::27;
+set_real_ip_from 2a0b:f4c2::28;
+set_real_ip_from 2a0b:f4c2::29;
+set_real_ip_from 2a0b:f4c2::3;
+set_real_ip_from 2a0b:f4c2::30;
+set_real_ip_from 2a0b:f4c2::31;
 set_real_ip_from 2a0b:f4c2:3::64;
 set_real_ip_from 2a0b:f4c2:3::65;
 set_real_ip_from 2a0b:f4c2:3::66;
@@ -616,6 +645,7 @@ set_real_ip_from 2a0b:f4c2:3::87;
 set_real_ip_from 2a0b:f4c2:3::88;
 set_real_ip_from 2a0b:f4c2:3::89;
 set_real_ip_from 2a0b:f4c2:3::90;
+set_real_ip_from 2a0b:f4c2::4;
 set_real_ip_from 2a0b:f4c2:4::100;
 set_real_ip_from 2a0b:f4c2:4::101;
 set_real_ip_from 2a0b:f4c2:4::102;
@@ -631,6 +661,11 @@ set_real_ip_from 2a0b:f4c2:4::96;
 set_real_ip_from 2a0b:f4c2:4::97;
 set_real_ip_from 2a0b:f4c2:4::98;
 set_real_ip_from 2a0b:f4c2:4::99;
+set_real_ip_from 2a0b:f4c2::5;
+set_real_ip_from 2a0b:f4c2::6;
+set_real_ip_from 2a0b:f4c2::7;
+set_real_ip_from 2a0b:f4c2::8;
+set_real_ip_from 2a0b:f4c2::9;
 set_real_ip_from 2a0c:e300::23;
 set_real_ip_from 2a0d:3e83:1:b284::1;
 set_real_ip_from 2a0d:c2c0:1:4::2;
